prevents tags from shrinking and causing a flicker

--- a/app/javascript/mastodon/features/account_timeline/v2/styles.module.scss
+++ b/app/javascript/mastodon/features/account_timeline/v2/styles.module.scss
@@ -67,6 +67,10 @@
   flex-wrap: nowrap;
   overflow: hidden;
   position: relative;
+
+  > button {
+    flex-shrink: 0;
+  }
 }
 
 .tagsListShowAll {
